[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/BalaoTexto.gd" type="Script" id=1]
[ext_resource path="res://assets/aflfont.TTF" type="DynamicFontData" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="BalaoTexto" type="Node2D"]
light_mask = 0
z_index = 2
script = ExtResource( 1 )

[node name="Ancora" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Ancora"]
visible = false
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Ancora"]
material = SubResource( 1 )
margin_right = 184.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
bbcode_enabled = true
visible_characters = 0
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
